# speckle-generator

./: LICENSE  README.md  pyproject.toml
src/: Speckle.py  example_1_simple_speckle.py  speckle_generator.py
src/examples/: example_1_simple_speckle.py  example_open_image  example_random_locations.py  example_save_image.py
src/pyvale.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/speckle/: speckle.py  speckle_generator.py
src/speckle_gen/: example_1_simple_speckle.py
src/specklegenerator/: specklegenerator.py
src/specklegenerator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_function_outputs.py  test_input_parameters.py  test_regression.py
